--- a/employee-tracker/src/components/Header/style.css
+++ b/employee-tracker/src/components/Header/style.css
@@ -1,3 +1,10 @@
 .img-header {
     width: 100%
 }
+
+h1 {
+    text-align: center;
+    background: lightblue;
+    margin: 25px;
+    padding: 10px;
+}
